# hello-hypermodern-python-tooling

./: README.md  noxfile.py  pyproject.toml
hello_poetry_and_nox/: main.py
tests/: test_covered_by_test.py  test_root.py
